// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calculator /> renders a basic calculator 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={false}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={false}
    style={
      {
        "boxSizing": "border-box",
        "cursor": "move",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 9007199254740991,
        "maxWidth": 9007199254740991,
        "minHeight": undefined,
        "minWidth": undefined,
        "position": "fixed",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "auto",
      }
    }
    transform={null}
  >
    <div
      className="panel  card"
      id="calculator-panel"
      role="button"
      style={
        {
          "height": undefined,
        }
      }
      tabIndex={0}
    >
      <h3
        className="card-header"
      >
        <span
          className="unselectable"
        >
          calculator
        </span>
        <div
          style={
            {
              "float": "right",
            }
          }
        >
          <button
            aria-label="minimize"
            className="panel-button fas fa-window-minimize"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
      </h3>
      <div
        className="card-body"
        style={
          {
            "display": null,
          }
        }
      >
        <div
          className="desaturated container"
        >
          <input
            autoFocus={true}
            className="form-control"
            id="calc-text-area"
            onChange={[Function]}
            onKeyPress={[Function]}
            readOnly={false}
            type="text"
            value="0"
          />
          <p>
            answer
             = 
            0
          </p>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-light"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  (
                </button>
                <button
                  className="calculator-btn-small btn btn-light"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  )
                </button>
                <button
                  className="calculator-btn-small btn btn-warning"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  copy
                </button>
                <button
                  className="calculator-btn-small btn btn-warning"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  expand
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  7
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  8
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  9
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  ÷
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  4
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  5
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  6
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  1
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  2
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  3
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Ans
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  0
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  .
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  CE
                </button>
                <button
                  className="calculator-btn-small btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  AC
                </button>
                <button
                  className="calculator-half-btn btn btn-success"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  =
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`<Calculator /> renders an expandable calculator 1`] = `
<div
  node={<body />}
>
  <div
    className="react-draggable"
    disabled={false}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    resizable={false}
    style={
      {
        "boxSizing": "border-box",
        "cursor": "move",
        "display": "inline-block",
        "flexShrink": 0,
        "height": "auto",
        "left": 0,
        "maxHeight": 9007199254740991,
        "maxWidth": 9007199254740991,
        "minHeight": undefined,
        "minWidth": undefined,
        "position": "fixed",
        "top": 0,
        "transform": "translate(30px,30px)",
        "userSelect": "auto",
        "width": "auto",
      }
    }
    transform={null}
  >
    <div
      className="panel  card"
      id="calculator-panel"
      role="button"
      style={
        {
          "height": undefined,
        }
      }
      tabIndex={0}
    >
      <h3
        className="card-header"
      >
        <span
          className="unselectable"
        >
          calculator
        </span>
        <div
          style={
            {
              "float": "right",
            }
          }
        >
          <button
            aria-label="minimize"
            className="panel-button fas fa-window-minimize"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          />
        </div>
      </h3>
      <div
        className="card-body"
        style={
          {
            "display": null,
          }
        }
      >
        <div
          className="desaturated container"
        >
          <input
            autoFocus={true}
            className="form-control"
            id="calc-text-area"
            onChange={[Function]}
            onKeyPress={[Function]}
            readOnly={false}
            type="text"
            value="0"
          />
          <p>
            answer
             = 
            0
          </p>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-light"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  (
                </button>
                <button
                  className="calculator-btn-small btn btn-light"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  )
                </button>
                <button
                  className="calculator-btn-small btn btn-warning"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  copy
                </button>
                <button
                  className="calculator-btn-small btn btn-warning"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  expand
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  7
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  8
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  9
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  ÷
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  4
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  5
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  6
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  ×
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  1
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  2
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  3
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  -
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Ans
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  0
                </button>
                <button
                  className="calculator-btn-small btn btn-dark"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  .
                </button>
                <button
                  className="calculator-btn-small btn btn-info"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  +
                </button>
              </div>
              <div
                className="row"
              >
                <button
                  className="calculator-btn-small btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  CE
                </button>
                <button
                  className="calculator-btn-small btn btn-danger"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  AC
                </button>
                <button
                  className="calculator-half-btn btn btn-success"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  =
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`<Calculator /> renders an inactive calculator 1`] = `null`;
